<resources>
    <string name="app_name" translatable="false">DevPractice</string>

    <string name="title_home">Home</string>
    <string name="title_customs">Customs</string>
    <string name="title_library">Library</string>
    <string name="title_setting">Setting</string>

    <string name="error_not_found">Not Found</string>
    <string name="error_player" translatable="false">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="error_email_invalid">Email is invalid</string>
    <string name="error_password_invalid">Password must be at least 6 characters.</string>
    <string name="error_password_not_match">Password not match</string>
    <string name="error_mobile_invalid">Mobile number is invalid</string>
    <string name="error_id_card_invalid">ID card number is invalid</string>
    <string name="error_please_fill">Please fill</string>

    <string name="price_format" translatable="false">฿%,.0f</string>
    <string name="price_percentage" translatable="false">%,.0f%%</string>

    <!--Title-->
    <string name="title_new_post">New post</string>
    <string name="title_edit_post">Edit post</string>

    <!--Button-->
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_logout">Logout</string>

    <!--Post-->
    <string name="post_like">Like %,d</string>
    <string name="post_comment">ดูความเห็นทั้ง %,d รายการ</string>
    <string name="post_hint">คุณกำลังคิดอะไรอยู่</string>
    <string name="post_shared">Share</string>

    <!-- Setting -->
    <string name="setting_change_language">Change Language</string>
    <string name="setting_notification">Notification</string>
    <string name="setting_version">Version</string>
    <string name="setting_about">About</string>
    <string name="setting_privacy_policy">Privacy Policy</string>

    <!--Dialog-->
    <string name="dialog_select_language">Select language</string>
    <string name="dialog_login_failed">User not found.</string>
    <string name="dialog_register_failed">Register failed.</string>
    <string name="dialog_logout">Do you want to Logout?</string>

    <string-array name="dialog_list_more_owner">
        <item>Delete</item>
        <item>Edit</item>
    </string-array>

    <string-array name="dialog_list_more">
        <item>Delete</item>
    </string-array>

    <!-- language -->
    <string name="language_thai" translatable="false">ไทย</string>
    <string name="language_english" translatable="false">English</string>

    <!--Category-->
    <string name="category_video">Video</string>
    <string name="category_view_pager_vertical" translatable="false">ViewPager Vertical</string>
    <string name="category_fragment_view_pager_vertical" translatable="false">Fragment ViewPager Vertical</string>
    <string name="category_slide_to_dismiss_activity" translatable="false">Slide to dismiss activity</string>

    <!--Register-->
    <string name="register">Register</string>
    <string name="register_edit_mode">Edit profile</string>
    <string name="register_first_name">First name</string>
    <string name="register_last_name">Last name</string>
    <string name="register_mobile">Mobile</string>
    <string name="register_email">Email</string>
    <string name="register_identify_card">ID card</string>
    <string name="register_gender">Gender</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm password</string>
    <string name="register_remark">Remark ..</string>
    <string-array name="gender_list">
        <item>Your gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!--Login-->
    <string name="login_title">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>

</resources>
