<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small"
            android:text="@string/dialog_select_language"
            android:textAllCaps="true"
            android:textSize="@dimen/text_small" />

        <LinearLayout
            android:id="@+id/linearlayoutThai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="@dimen/padding_small">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_small">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:src="@drawable/img_setting_flag_thai" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_small"
                android:padding="@dimen/padding_small"
                android:text="@string/language_thai"
                android:textSize="@dimen/text_small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayoutEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="@dimen/padding_small">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_small">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:src="@drawable/img_setting_flag_english" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_small"
                android:padding="@dimen/padding_small"
                android:text="@string/language_english"
                android:textSize="@dimen/text_small" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>