<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <include layout="@layout/layout_action_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_normal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="@dimen/text_normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_small"
            android:layout_marginRight="@dimen/padding_small"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_xxxlarge"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login_email"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_small" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/padding_small"
                        android:background="@null"
                        android:hint="@string/login_email"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/padding_small"
                        android:textSize="@dimen/text_small" />

                    <ImageButton
                        android:id="@+id/btnClearEmail"
                        android:layout_width="@dimen/button_clear"
                        android:layout_height="@dimen/button_clear"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_clear"
                        android:visibility="invisible"
                        tools:visibility="visible" />
                </RelativeLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_small"
                android:layout_marginTop="@dimen/padding_small"
                android:background="@color/color_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login_password"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_small" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/padding_small"
                        android:background="@null"
                        android:hint="@string/login_password"
                        android:inputType="textPassword"
                        android:padding="@dimen/padding_small"
                        android:textSize="@dimen/text_small" />

                    <ImageButton
                        android:id="@+id/btnClearPassword"
                        android:layout_width="@dimen/button_clear"
                        android:layout_height="@dimen/button_clear"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_clear"
                        android:visibility="invisible"
                        tools:visibility="visible" />

                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_small"
                android:layout_marginTop="@dimen/padding_small"
                android:background="@color/color_line" />

        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_xxxlarge"
            android:background="@drawable/button_active"
            android:foreground="?selectableItemBackgroundBorderless"
            android:text="@string/button_login"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_red"
            android:foreground="?selectableItemBackgroundBorderless"
            android:text="@string/button_register"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_normal" />

    </LinearLayout>

</LinearLayout>